--- a/helm-chart/templates/services.yaml
+++ b/helm-chart/templates/services.yaml
@@ -7,8 +7,13 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.port }}
+    - port: 80
+      targetPort: 80
       protocol: TCP
+      name: http
+    - port: 443
+      targetPort: 443
+      protocol: TCP
+      name: https
   selector:
     {{- include "yelp-camp.selectorLabels" . | nindent 4 }}
