--- a/helm-chart/templates/nginx-config.yaml
+++ b/helm-chart/templates/nginx-config.yaml
@@ -29,7 +29,7 @@ data:
         ssl_certificate_key /etc/letsencrypt/live/{{ .Values.domain }}/privkey.pem;
         
         location / {
-          proxy_pass http://localhost:{{ .Values.service.port }};
+          proxy_pass http://{{ include "yelp-camp.fullname" . }}:{{ .Values.service.port }};
           proxy_set_header Host $host;
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
