--- a/helm-chart/templates/nginx-config.yaml
+++ b/helm-chart/templates/nginx-config.yaml
@@ -13,7 +13,11 @@ data:
         server_name {{ .Values.domain }};
         
         location / {
-          return 301 https://$host$request_uri;
+          proxy_pass http://{{ include "yelp-camp.fullname" . }}:{{ .Values.service.port }};
+          proxy_set_header Host $host;
+          proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_set_header X-Forwarded-Proto $scheme;
         }
         
         location /.well-known/acme-challenge/ {
@@ -21,19 +25,20 @@ data:
         }
       }
       
-      server {
-        listen 443 ssl;
-        server_name {{ .Values.domain }};
-        
-        ssl_certificate /etc/letsencrypt/live/{{ .Values.domain }}/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/{{ .Values.domain }}/privkey.pem;
-        
-        location / {
-          proxy_pass http://{{ include "yelp-camp.fullname" . }}:{{ .Values.service.port }};
-          proxy_set_header Host $host;
-          proxy_set_header X-Real-IP $remote_addr;
-          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-          proxy_set_header X-Forwarded-Proto $scheme;
-        }
-      }
+      # Commented out SSL configuration until certificates are available
+      # server {
+      #   listen 443 ssl;
+      #   server_name {{ .Values.domain }};
+      #   
+      #   ssl_certificate /etc/letsencrypt/live/{{ .Values.domain }}/fullchain.pem;
+      #   ssl_certificate_key /etc/letsencrypt/live/{{ .Values.domain }}/privkey.pem;
+      #   
+      #   location / {
+      #     proxy_pass http://{{ include "yelp-camp.fullname" . }}:{{ .Values.service.port }};
+      #     proxy_set_header Host $host;
+      #     proxy_set_header X-Real-IP $remote_addr;
+      #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      #     proxy_set_header X-Forwarded-Proto $scheme;
+      #   }
+      # }
     }
