--- a/helm-chart/templates/nginx-config.yaml
+++ b/helm-chart/templates/nginx-config.yaml
@@ -4,10 +4,21 @@ metadata:
   name: {{ include "yelp-camp.fullname" . }}-nginx-config
 data:
   nginx.conf: |
+    user nginx;
+    worker_processes auto;
+    error_log /var/log/nginx/error.log warn;
+    pid /var/run/nginx.pid;
+
     events {
       worker_connections 1024;
     }
+
     http {
+      include /etc/nginx/mime.types;
+      default_type application/octet-stream;
+      sendfile on;
+      keepalive_timeout 65;
+
       server {
         listen 80;
         server_name {{ .Values.domain }};
@@ -24,7 +35,7 @@ data:
           root /var/www/certbot;
         }
       }
-      
+
       # Commented out SSL configuration until certificates are available
       # server {
       #   listen 443 ssl;
