--- a/helm-chart/templates/nginx-deployment.yaml
+++ b/helm-chart/templates/nginx-deployment.yaml
@@ -39,3 +39,15 @@ spec:
               mountPath: /etc/letsencrypt
             - name: certbot-work
               mountPath: /var/www/certbot
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 5
+            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 15
+            periodSeconds: 20
