--- a/helm-chart/templates/nginx-config.yaml
+++ b/helm-chart/templates/nginx-config.yaml
@@ -6,7 +6,7 @@ data:
   nginx.conf: |
     user nginx;
     worker_processes auto;
-    error_log /var/log/nginx/error.log warn;
+    error_log /var/log/nginx/error.log;
     pid /var/run/nginx.pid;
 
     events {
@@ -16,40 +16,14 @@ data:
     http {
       include /etc/nginx/mime.types;
       default_type application/octet-stream;
-      sendfile on;
-      keepalive_timeout 65;
+      access_log /var/log/nginx/access.log;
 
       server {
         listen 80;
-        server_name {{ .Values.domain }};
-        
+        server_name localhost;
+
         location / {
-          proxy_pass http://{{ include "yelp-camp.fullname" . }}:{{ .Values.service.port }};
-          proxy_set_header Host $host;
-          proxy_set_header X-Real-IP $remote_addr;
-          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-          proxy_set_header X-Forwarded-Proto $scheme;
-        }
-        
-        location /.well-known/acme-challenge/ {
-          root /var/www/certbot;
+          return 200 'Nginx is running!';
         }
       }
-
-      # Commented out SSL configuration until certificates are available
-      # server {
-      #   listen 443 ssl;
-      #   server_name {{ .Values.domain }};
-      #   
-      #   ssl_certificate /etc/letsencrypt/live/{{ .Values.domain }}/fullchain.pem;
-      #   ssl_certificate_key /etc/letsencrypt/live/{{ .Values.domain }}/privkey.pem;
-      #   
-      #   location / {
-      #     proxy_pass http://{{ include "yelp-camp.fullname" . }}:{{ .Values.service.port }};
-      #     proxy_set_header Host $host;
-      #     proxy_set_header X-Real-IP $remote_addr;
-      #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      #     proxy_set_header X-Forwarded-Proto $scheme;
-      #   }
-      # }
     }
