--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -8,6 +8,14 @@ service:
   type: LoadBalancer
   port: 3000
 
+resources:
+  requests:
+    memory: "256Mi"
+    cpu: "100m"
+  limits:
+    memory: "512Mi"
+    cpu: "200m"
+
 probes:
   livenessProbe:
     initialDelaySeconds: 30
