--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -12,9 +12,11 @@ resources:
   requests:
     memory: "256Mi"
     cpu: "100m"
+    ephemeral-storage: "256Mi"
   limits:
     memory: "512Mi"
     cpu: "200m"
+    ephemeral-storage: "512Mi"
 
 probes:
   livenessProbe:
